TypeScript strong typing, fixed scrollbar issue

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ body {
 #map svg {
     width: 100%;
     height: 100%;
+    display: block;
 }
 
 #histogram {
@@ -56,6 +57,7 @@ body {
     background-color: slategray;
     color: white;
     float: left;
+    overflow-y: auto;
 }
 #controls {
     padding: 1em 2em;
@@ -79,9 +81,10 @@ body {
     text-align: center;
     font-size: 1.5em;
     font-weight: bold;
+    margin: 0.3em 0;
 }
 #pid {
-    font-size: 1.3em;
+    font-size: 1.1em;
     text-align: center;
 }
 #tooltip table {
